# quickindia-crm

./: .gitignore  README.md  pyproject.toml  requirements.txt
apps/accounts/: admin.py  forms.py  models.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_user_phone_number_user_profile_image_user_role_and_more.py  0003_alter_user_is_active.py
apps/dashboard/: urls.py  views.py
apps/landing/: admin.py  forms.py  models.py  urls.py  views.py
apps/landing/migrations/: 0001_initial.py
apps/leads/: admin.py  forms.py  models.py  urls.py  views.py
apps/leads/migrations/: 0001_initial.py  0002_leadlog.py
apps/notifications/: admin.py  models.py  services.py  urls.py  views.py
apps/notifications/migrations/: 0001_initial.py  0002_notification_action_url.py
config/: settings.py  urls.py
templates/: base.html
templates/accounts/: login.html
templates/components/: followups.html  followups_drawer.html  footer.html  navbar.html  page_header.html  search_filter.html  sidebar.html
templates/components/modals/: add_lead_modal.html  delete_modal.html  lead_detail_modal.html
templates/components/tables/: lead_table.html
templates/dashboard/: crm.html
templates/landing/: index.html
